--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.17",
+    "@langchain/openai": "^0.0.12",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tabler/icons-react": "^2.9.0",
     "@types/node": "18.15.0",
@@ -18,7 +20,7 @@
     "eslint-config-next": "13.2.4",
     "eventsource-parser": "^0.1.0",
     "hnswlib-node": "^2.0.0",
-    "langchain": "^0.0.127",
+    "langchain": "^0.1.3",
     "next": "13.2.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
